add /service/metronome/v1/jobs/{jobId}/runs/{runId}/actions/stop
